--- a/public/assets-src/sass/04_layout/_default.scss
+++ b/public/assets-src/sass/04_layout/_default.scss
@@ -70,7 +70,7 @@ body {
  */
 .footer {
 	margin:s-space(bigger) * -1;
-	margin-top:0;
+	margin-top:s-space(bigger);
 	padding: s-space(bigger);
 	background: darken(white,5%);
 	background: white;
