--- a/public/assets-src/sass/06_blocks/_documentation.scss
+++ b/public/assets-src/sass/06_blocks/_documentation.scss
@@ -19,7 +19,10 @@
 		border-bottom:1px solid s-color(border);
 		padding-bottom:1rem;
 		margin-bottom:2rem;
-		margin-top:2rem;
+		margin-top:4rem;
+	}
+	h3 {
+		margin-top:4rem;
 	}
 
 	pre {
