--- a/public/assets-src/sass/06_blocks/_styleguide.scss
+++ b/public/assets-src/sass/06_blocks/_styleguide.scss
@@ -4,16 +4,18 @@
 .styleguide {
 
 	.h1 {
-		background-color:s-color(title);
-		background-image:url('../img/header-bkg-grey.png');
-		background-blend-mode: luminosity;
-		background-repeat:no-repeat;
-		background-size:cover;
-		color: white;
-		margin:s-space(bigger) * -1;
+		// background-color:s-color(title);
+		// background-image:url('../img/header-bkg-grey.png');
+		// background-blend-mode: luminosity;
+		// background-repeat:no-repeat;
+		// background-size:cover;
+		// color: white;
+		border-bottom:1px solid s-color(border);
+		// margin:s-space(bigger) * -1;
 		margin-bottom:s-space(bigger);
-		padding:s-space(bigger);
-		text-shadow:rgba(0,0,0,.3) 0 0 5px;
+		padding-bottom:s-space(bigger);
+		// padding:s-space(bigger);
+		// text-shadow:rgba(0,0,0,.3) 0 0 5px;
 	}
 	.h2 {
 		a[name] {
