--- a/public/assets-src/sass/07_objects/_preview-color.scss
+++ b/public/assets-src/sass/07_objects/_preview-color.scss
@@ -5,13 +5,13 @@
 	border: 1px solid s-color(border);
 	border-radius: s-lnf(border-radius);
 	background: white;
-	@include s-depth(10);
-	@include s-transition(fast);
+	// @include s-depth(10);
+	// @include s-transition(fast);
 
-	&:hover {
-		transform:scale(1.01,1.01);
-		@include s-depth(20);
-	}
+	// &:hover {
+	// 	transform:scale(1.01,1.01);
+	// 	@include s-depth(20);
+	// }
 }
 	.preview-color__color {
 		height:50px;
