--- a/public/assets-src/sass/03_generic/_typography.scss
+++ b/public/assets-src/sass/03_generic/_typography.scss
@@ -1,1 +1,5 @@
-@include s-typography-classes();
+@include s-typography-title-classes();
+@include s-typography-paragraph-classes();
+@include s-typography-link-classes();
+@include s-typography-inline-text-classes();
+@include s-typography-list-classes();
