fix logo display

--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 			<div class="gr-adapt auto-height nowrap topbar__logo">
 				<a href="/">
 					{{#if logo}}
-						<img style="width:100px; max-height:30px;" class="inline-block" src="/{{logo}}" />
+						<img style="height:25px;" class="inline-block" src="/{{logo}}" />
 					{{else}}
 						<div style="width:80px;" class="coffeekraken-logo"></div>
 					{{/if}}
