update topbar display

--- a/public/assets-src/sass/04_layout/_default.scss
+++ b/public/assets-src/sass/04_layout/_default.scss
@@ -68,7 +68,7 @@ body {
 	padding:0 0 0 10px;
 }
 	.topbar__logo {
-		background: s-color(secondary, -lighten 10%);
+		background: s-color(primary);
 	}
 
 /**
