--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 					{{#if logo}}
 						<img style="height:25px;" class="inline-block" src="/{{logo}}" />
 					{{else}}
-						<div style="width:80px;" class="coffeekraken-logo"></div>
+						<div style="width:80px;" class="coffeekraken-logo coffeekraken-logo--white"></div>
 					{{/if}}
 				</a>
 			</div>
