--- a/public/assets-src/sass/07_objects/_coffeekraken-logo.scss
+++ b/public/assets-src/sass/07_objects/_coffeekraken-logo.scss
@@ -5,3 +5,10 @@
 	);
 	max-width:120px;
 }
+.coffeekraken-logo--white {
+	@include s-coffeekraken-logo(
+		$color : white,
+		$accent : white
+	);
+	max-width:120px;
+}
