--- a/public/assets-src/sass/06_blocks/_documentation.scss
+++ b/public/assets-src/sass/06_blocks/_documentation.scss
@@ -71,4 +71,33 @@
 		margin-top:2em;
 		margin-bottom:2em;
 	}
+
+	img {
+		&:not(.img-fullscreen) {
+			max-width:500px;
+			max-height:500px;
+			border:solid 4px s-color(primary);
+			cursor: pointer;
+			outline: none;
+			@include s-transition(fast);
+		}
+
+		// &:hover {
+		// 	border-left-width: 10px;
+		// }
+
+		&:focus + .img-fullscreen {
+			display: block;
+		}
+	}
+	.img-fullscreen {
+		position:fixed;
+		top:50%; left:50%;
+		@include s-translate(-50%, -50%);
+		width:100%; height:100%;
+		background: s-color(secondary, -opacity .8);
+		object-fit: scale-down;
+		cursor: pointer;
+		display:none;
+	}
 }
