--- a/public/assets-src/sass/06_blocks/_documentation.scss
+++ b/public/assets-src/sass/06_blocks/_documentation.scss
@@ -92,6 +92,7 @@
 	}
 	.img-fullscreen {
 		position:fixed;
+		z-index:10;
 		top:50%; left:50%;
 		@include s-translate(-50%, -50%);
 		width:100%; height:100%;
