fix fullscreen image

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7617,6 +7617,7 @@ html, body {
 
 .documentation .img-fullscreen {
   position: fixed;
+  z-index: 10;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%) translateZ(0);
