--- a/public/assets-src/sass/06_blocks/_all.scss
+++ b/public/assets-src/sass/06_blocks/_all.scss
@@ -4,7 +4,8 @@
  * A block can contain other blocks or objects and does not have to relay on his ancestors
  * to be properly displayed.
  */
-@import "documentation",
+@import "dialog",
+		"documentation",
 		"nav",
 		"s-custom-scrollbar",
 		"s-interactive-demo",
