update dialog display

--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -75,7 +75,7 @@
 										<a class="btn btn--primary" s-dialog-ok>
 											Close
 										</a>
-										<ul class="list list--contributors m-b pull-right">
+										<ul class="list list--contributors m-b m-l pull-right">
 											{{#each packageJson.contributors}}
 											<li class="list__item relative">
 												<a class="block" href="{{this.url}}" title="{{this.name}}" target="_blank">
