add coffeekraken logo dialog

--- a/public/assets-src/sass/07_objects/_coffeekraken-logo.scss
+++ b/public/assets-src/sass/07_objects/_coffeekraken-logo.scss
@@ -13,7 +13,7 @@
 	max-width:120px;
 }
 
-.coffeekraken--dialog {
+.coffeekraken-logo--dialog {
 	@include s-coffeekraken-logo(
 		$color : s-color(secondary),
 		$accent : white
